<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorSecondary"
    tools:context=".view.DetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_one_horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_one_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_contact_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="10dp"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyTheme.Image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_contact_initials"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/img_contact_icon"
        app:layout_constraintEnd_toEndOf="@id/img_contact_icon"
        app:layout_constraintTop_toTopOf="@id/img_contact_icon"
        app:layout_constraintBottom_toBottomOf="@id/img_contact_icon"
        android:text="@string/gb"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_one_vert"
        app:layout_constraintTop_toBottomOf="@id/gl_one_horz"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_details_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_one_horz"
        app:layout_constraintBottom_toBottomOf="@id/tv_first_name"
        android:text="@string/grant"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/gl_one_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_details_last_name"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_first_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_last_name"
        android:text="@string/buley"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/gl_one_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_last_name"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_details_phone_number"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_last_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"
        android:textColor="@color/black"
        android:text="@string/_111_111_1111"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/gl_one_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_details_address"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/tv_address"
        android:inputType="textPostalAddress"
        android:textColor="@color/black"
        android:text="@string/idontcare_st_garland_tx_75044" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/change_contact_details"/>




</androidx.constraintlayout.widget.ConstraintLayout>